# vcot

./: .gitignore  IDEA.md  README.md  RUNBOOK.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
modal_app/: README.md  dataset.py  eval.py  pipeline.py  planner.py  renderer.py
src/vcot/: __init__.py  cli.py
src/vcot/analysis/: __init__.py  aggregate.py
src/vcot/dataset/: __init__.py  assemble.py  pack.py  seed_prompts.py  seedgen.py  sft.py
src/vcot/eval/: __init__.py  calibration.py  dedup.py  faithfulness.py  quality.py  safety.py  splits.py  stats.py
src/vcot/pipeline/: __init__.py  enrich.py  llm.py  pipeline.py  planner.py  prompts.py  run.py  schemas.py  visual_tokens.py
src/vcot/reporting/: __init__.py  __main__.py  report.py  runlog.py
src/vcot/telemetry/: __init__.py  billing.py  cost_timer.py  rates.py
src/vcot/train/: __init__.py  distill.py
tests/: conftest.py  test_analysis.py  test_assemble.py  test_billing.py  test_cli.py  test_cost_timer.py  test_dataset.py  test_enrich.py  test_eval.py  test_eval_extra.py  test_pack.py  test_pipeline.py  test_planner.py  test_rates.py  test_report.py  test_runlog.py  test_schemas.py  test_train.py  test_visual_tokens.py
